--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
       canvas{
         width: auto !important;
         height: 100vh !important;
+         background-color: #FFF;
       }
       @media screen and (max-width: 750px){
         canvas{
