--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
   </head>
   
   <body style="background-color: white;">
+    <style media="screen" type="text/css">
+      @font-face {
+        font-family: font1;
+        src: url('assets/font/PixelMplus10-Regular.ttf');
+        font-weight:400;
+        font-weight:normal;
+      }
+    </style>    
+    <div style="font-family:font1; position:absolute; left:-1000px; visibility:hidden;">.</div>
     <div id="content" style="display: block; width: 100%; text-align: center"></div>
     <script>
       let global_DB;
